--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <header>
     <div class="wrapper"> 
       <h1>
-        <a href="Entry9.html">
+        <a href="index.html">
           <img class="logo" src="images/logo.svg" alt="travel" />
         </a>
       </h1>
       <nav>
         <ul class="main-nav">
-          <li> <a href="Entry9.html" class="current meun-home">About</a></li>
+          <li> <a href="index.html" class="current meun-home">About</a></li>
           <li> <a href="Entry8.html" class="current meun-job">Business</a></li>
           <li> <a href="Help.Entry10.html" class="current meun-form">Help</a></li>
         </ul>
