--- a/Entry8.html
+++ b/Entry8.html
@@ -48,7 +48,7 @@
     </header>
 
     <main>
-      <h2 class="title title-center">Business</h2>
+      <h2 class="title title-center">Job</h2>
       <p3 class="p3">
         CurrenTech, a dynamic tech startup, seeks global business partners.
       </p3>
