--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav>
         <ul class="main-nav">
           <li> <a href="index.html" class="current meun-home">About</a></li>
-          <li> <a href="Entry8.html" class="current meun-job">Business</a></li>
+          <li> <a href="Entry8.html" class="current meun-job">Job</a></li>
           <li> <a href="Help.Entry10.html" class="current meun-form">Help</a></li>
         </ul>
       </nav>
@@ -49,7 +49,7 @@
       This app serves as a social platform to make travel more meaningful and enjoyable.
       <br/>
     </p>
-    <a href="Entry8.html" class="btn btn-primary">Business</a>
+    <a href="Entry8.html" class="btn btn-primary">Job</a>
   </section>
 
   <section class="brown-bg">
