--- a/Entry8.html
+++ b/Entry8.html
@@ -39,7 +39,7 @@
         <nav>
           <ul class="main-nav">
             <li> <a href="index.html" class="current meun-home">About</a></li>
-            <li> <a href="Entry8.html" class="current meun-job">Business</a></li>
+            <li> <a href="Entry8.html" class="current meun-job">Job</a></li>
             <li> <a href="Help.Entry10.html" class="current meun-form">Help</a></li>
 
           </ul>
