--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <h2 class="title"> 
           Keyword</h2>
         <p>  
-          Our app is a social platform designed for users seeking travel companions, exploring destinations together, and experiencing local cultures. It offers the opportunity to enjoy safe travels, share diverse languages and cultures, and connect with new friends.
+          Our app is a social platform designed for users seeking travel companions, exploring destinations together, and experiencing local cultures. 
+          <br>It offers the opportunity to enjoy safe travels, share diverse languages and cultures, and connect with new friends.
         </p>
 
       </div>
