--- a/Help.Entry10.html
+++ b/Help.Entry10.html
@@ -118,10 +118,10 @@
 
     <footer>
       <ul class="footer-nav">
-        <li><a href="">App</a></li>
-        <li><a href="#">Travel</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Sign in</a></li>
+        <li><a href="https://kimh764.github.io/H.Kim-harmonic-collection-travel/Entry.2.3.4.5/1.index.html">App</a></li>
+        <li><a href="https://kimh764.github.io/H.Kim-harmonic-collection-travel/Entry.2.3.4.5/1.index.html">Travel</a></li>
+        <li><a href="https://kimh764.github.io/H.Kim-harmonic-collection-travel/Entry.2.3.4.5/1.index.html">Blog</a></li>
+        <li><a href="https://kimh764.github.io/H.Kim-harmonic-collection-travel/Entry.2.3.4.5/1.index.html">Sign in</a></li>
       </ul>
     </footer>
   </body>
